# ds-contract-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: client.yaml  server.yaml
api/contract-generator/: openapi.yaml
api/contract-validator/: openapi.yaml
client/contract-generator/: README.md
client/contract-validator/: README.md
deploy/: README.md
deploy/scripts/: deploy-all.sh  generate-signing-key.sh
deploy/values/: hus-clearing-house.yaml  hus-generator.yaml  hus-validator.yaml
docs/: contract-engine-payload-spec.md  contract-engine-research.md  cross-node-processing.md  payload-format.md
examples/: README.md  compose-e2e-test.sh  end-to-end.sh
helm-charts/clearing-house-stub/: ds-clearing-house-stub-0.1.0-dev.10.develop.76a9529f.tgz  ds-clearing-house-stub-0.1.0-dev.11.develop.0cce022a.tgz  ds-clearing-house-stub-0.1.0-dev.12.main.af108552.tgz  ds-clearing-house-stub-0.1.0-dev.3.main.7dff0035.tgz  ds-clearing-house-stub-0.1.0-dev.8.develop.b21b22f2.tgz  ds-clearing-house-stub-0.1.0-dev.9.develop.05cead5b.tgz  ds-clearing-house-stub-0.1.0-dev.9.main.37de861c.tgz  ds-clearing-house-stub-0.1.0.tgz  index.yaml
helm-charts/contract-generator/: ds-contract-generator-0.1.0-dev.10.develop.76a9529f.tgz  index.yaml  (+7 more)
server/clearing-house-stub/: .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml
server/clearing-house-stub/app/: __init__.py  main.py  settings.py  storage.py
server/clearing-house-stub/app/rest_api/: serializers.py
server/clearing-house-stub/app/rest_api/routes/: __init__.py  contracts.py  health_check.py
server/clearing-house-stub/charts/server/: Chart.yaml  values.yaml
server/clearing-house-stub/charts/server/templates/: _helpers.tpl  ingress.yaml  servicemonitor.yaml
server/clearing-house-stub/tests/: test_smoke.py
server/contract-validator/: .env.example  Dockerfile  README.md  pyproject.toml
server/contract-validator/app/: __init__.py  main.py  settings.py
server/contract-validator/app/adapters/: clearing_house.py  jwks_resolver.py
server/contract-validator/app/core/: entities.py  exceptions.py  ports.py  usecases.py
server/contract-validator/app/rest_api/: depends.py  response.py  serializers.py  tags.py
server/contract-validator/app/rest_api/routes/: __init__.py  health_check.py  validate.py
server/contract-validator/charts/server/: Chart.yaml  values.yaml
server/contract-validator/charts/server/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
server/contract-validator/tests/: test_smoke.py
tools/: README.md  generate-clients.sh  version.sh
(+42 files in other folders)
