[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ds-contract-validator"
version = "0.1.0"
description = "NextGen Data Space — Contract Validator Service (DS-307)"
readme = "README.md"
authors = ["HIRO-MicroDataCenters <all-hiro@hiro-microdatacenters.nl>"]
license = "MIT"
repository = "https://github.com/HIRO-MicroDataCenters-BV/ds-contract-engine"
homepage = "https://github.com/HIRO-MicroDataCenters-BV/ds-contract-engine"
packages = [{ include = "*", from = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109"
uvicorn = "^0.26"
classy-fastapi = "^0.6.1"
prometheus-fastapi-instrumentator = "^6.1.0"
pydantic = "^2.5"
pydantic-settings = "^2.5.2"
pyjwt = { extras = ["crypto"], version = "^2.8" }
cryptography = "^42.0"
httpx = "^0.27"
cachetools = "^5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
isort = { extras = ["colors"], version = "^5.13" }
mypy = "^1.8"
types-cachetools = "^5.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.12.0"
httpx = "^0.27"

[tool.isort]
line_length = 88
profile = "black"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = ["--tb=short"]
